fix rotas, controller, service, swagger
